AWSの設定追加、SESの利用

--- a/config/production_sample.env
+++ b/config/production_sample.env
@@ -4,3 +4,8 @@ DB_PASS: パスワード
 DB_PROTOCOL: プロトコル名
 DB_NAME: データベース名
 PORT: ポート番号
+AWS_SES_ENDPOINT: AWSのSESエンドポイント
+AWS_REGION: リージョン
+AWS_ACCESS_KEY_ID: アクセスキー
+AWS_SECRET_KEY: シークレットキー
+SCHEDULE: バッチ起動タイミング
