--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.13.4
-    working_directory: ~/go/src/github.com/test/example
+    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
     steps:
       - run: echo 'export PATH=/go/bin/:${PATH}' >> $BASH_ENV
       - run:
