--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,19 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Env Setup
-          command: echo 'export PATH=/go/bin/:${PATH}' >> $BASH_ENV
+          name: Go get library
+          command: go get -t -v -d ./...
+      - run:
+          name: base64 decode env file
+          # ファイルに改行が含まれているので`-i`オプションを付ける
+          command: echo $ENV | base64 -di > development.env
       - run:
           name: base64 decode firebase file
           # ファイルに改行が含まれているので`-i`オプションを付ける
           command: echo $FIREBASE_TOKEN | base64 -di > firebase-auth.json
       - run:
-          name: Go get library
-          command: go get -t -v -d ./...
+          name: Env Setup
+          command: echo 'export PATH=/go/bin/:${PATH}' >> $BASH_ENV
       - run:
           name: Go Auto Test
           command: GO_ENV=production go test -cover -v
