--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,27 @@ jobs:
       - run:
           name: Go Auto Test
           command: GO_ENV=production go test -cover -v
+  # EC2にSSH接続し、デプロイを実行
+  deploy:
+    machine:
+      image: circleci/classic:edge
+    steps:
+      - checkout
+      # CircleCIに登録した秘密鍵を呼び出す。
+      - add_ssh_keys:
+          fingerprints:
+            - '46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32'
+      - run: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio/go-docker/app/go-handson && git pull && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker-compose up -d'
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            # build ジョブに依存してるので、先に build ジョブを実行しろ！
+            - build
+          # master ブランチに push された場合のみ deploy
+          filters:
+            branches:
+              only: master
