--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,10 @@ jobs:
       # CircleCIに登録した秘密鍵を呼び出す。
       - add_ssh_keys:
           fingerprints:
-            - '46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32'
-      - run: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio/go-docker/app/go-handson && git pull && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker-compose up -d'
+            - "46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32"
+      - run:
+          name: circleci to EC2 deploy
+          command: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio/go-docker/app/go-handson && git pull && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker-compose up -d'
 workflows:
   version: 2
   build_and_deploy:
