--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/golang:1.13.4
     working_directory: ~/go/src/test
@@ -13,31 +13,52 @@ jobs:
           name: Env Setup
           command: echo 'export PATH=/go/bin/:${PATH}' >> $BASH_ENV
       - run:
-          name: Go Auto Test
+          name: Run Test
           command: GO_ENV=production go test -cover -v
-  # EC2にSSH接続し、デプロイを実行
-  deploy:
+  # EC2にSSH接続し、ビルドを実行
+  build:
     machine:
       image: circleci/classic:edge
     steps:
-      - checkout
       # CircleCIに登録した秘密鍵を呼び出す。
       - add_ssh_keys:
           fingerprints:
             - "46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32"
       - run:
-          name: circleci to EC2 deploy
-          command: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio/go-docker/app/go-handson && git pull && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker-compose up -d'
+          name: DockerImage Build
+          command: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio/go-docker/app/go-handson && git pull && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker rmi -f docker-portfolio_goapp golang && docker-compose build'
+  # EC2にSSH接続し、コンテナを実行
+  deploy:
+    machine:
+      image: circleci/classic:edge
+    steps:
+      # CircleCIに登録した秘密鍵を呼び出す。
+      - add_ssh_keys:
+          fingerprints:
+            - "46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32"
+      - run:
+          name: Docker Run
+          command: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio && docker-compose up -d'
+      - run:
+          name: sleep 60s
+          command: sleep 60
+      - run:
+          name: actuator
+          command: curl -X GET https://kemper0530.com/api/actuaterHealth
 workflows:
   version: 2
-  build_and_deploy:
+  test_and_build_and_deploy:
     jobs:
-      - build
+      - test
+      - build:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
       - deploy:
           requires:
-            # build ジョブに依存してるので、先に build ジョブを実行しろ！
             - build
-          # master ブランチに push された場合のみ deploy
           filters:
             branches:
               only: master
