--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             - "46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32"
       - run:
           name: DockerImage Build
-          command: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio/go-docker/app/go-handson && git pull origin master && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker rmi -f docker-portfolio_goapp golang && docker-compose build goapp'
+          command: ssh ${USER_NAME}@${HOST_NAME} 'ssh -i "portfolio_key.pem" ec2-user@${PRIVATE_SUBNET} && cd /work/docker-portfolio/go-docker/app/go-handson && git pull origin master && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker rmi -f docker-portfolio_goapp golang && docker-compose build goapp'
   # EC2にSSH接続し、コンテナを実行
   deploy:
     machine:
@@ -39,7 +39,7 @@ jobs:
             - "46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32"
       - run:
           name: Docker Run
-          command: ssh ${USER_NAME}@${HOST_NAME} 'cd /work/docker-portfolio && docker-compose up -d'
+          command: ssh ${USER_NAME}@${HOST_NAME} 'ssh -i "portfolio_key.pem" ec2-user@${PRIVATE_SUBNET} && cd /work/docker-portfolio && docker-compose up -d'
       - run:
           name: sleep 60s
           command: sleep 60
