--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       # CircleCIに登録した秘密鍵を呼び出す。
       - add_ssh_keys:
           fingerprints:
-            - "46:4c:fd:fd:5f:a4:25:e4:a1:0e:be:a6:18:d5:98:32"
+            - "68:76:75:bf:2f:99:83:88:c3:9b:54:6d:b1:d1:5e:49"
       - run:
           name: DockerImage Build
           command: ssh ${USER_NAME}@${HOST_NAME} 'ssh -i "portfolio_key.pem" ec2-user@${PRIVATE_SUBNET} && cd /work/docker-portfolio/go-docker/app/go-handson && git pull origin master && cd /work/docker-portfolio/ && docker stop go_portfolio && docker rm go_portfolio && docker rmi -f docker-portfolio_goapp golang && docker-compose build goapp'
@@ -51,15 +51,15 @@ workflows:
   test_and_build_and_deploy:
     jobs:
       - test
-      - build:
-          requires:
-            - test
-          filters:
-            branches:
-              only: master
-      - deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+      # - build:
+      #     requires:
+      #       - test
+      #     filters:
+      #       branches:
+      #         only: master
+      # - deploy:
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only: master
