--- a/config/production_sample.env
+++ b/config/production_sample.env
@@ -1,20 +1,13 @@
-# DB configue
-DBMS:
-DB_USER:
-DB_PASS:
-DB_PROTOCOL:
-DB_NAME:
-# API Setting
-PORT: 8080
-SCHEDULE: @every 30s
-SIGN_UP_PATH:
-# AWS Setting
-AWS_SES_ENDPOINT:
-AWS_REGION:
-AWS_ACCESS_KEY_ID:
-AWS_SECRET_KEY:
-# FireBase
-FIREBASE_PATH:
-# NEWS API
-NEWS_APIKEY:
-NEWS_URL:
+DBMS: mysql
+DB_USER: ユーザ名
+DB_PASS: パスワード
+DB_PROTOCOL: プロトコル名
+DB_NAME: データベース名
+PORT: ポート番号
+AWS_SES_ENDPOINT: AWSのSESエンドポイント
+AWS_REGION: リージョン
+AWS_ACCESS_KEY_ID: アクセスキー
+AWS_SECRET_KEY: シークレットキー
+SCHEDULE: バッチ起動タイミング
+FIREBASE_PATH: FireBaseのパス
+SIGN_UP_PATH: メールリンク認証用のパス
